fix(ToggleGroup): align with new css and api principles (#2424)
Part of #2295 and #2221

--- a/packages/css/button.css
+++ b/packages/css/button.css
@@ -28,6 +28,10 @@
   text-align: inherit;
   text-decoration: none;
 
+  &:focus-visible {
+    position: relative; /* Place focusring on top */
+  }
+
   &:not([hidden]) {
     display: flex;
   }
